src/main/java/com/spd/test/google_clone/errors/RepositoryErrorsEnum.java
package com.spd.test.google_clone.errors;

public enum RepositoryErrorsEnum {
    REPOSITORY_IS_EMPTY
}
